--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,47 @@
 *{box-sizing: border-box}
-body{padding:30px}
-.nav-item.active .nav-link{border-bottom: 1px solid black}
+*{padding:0;margin:0;}
+html{overflow-x: hidden;}
+/*html.popon,body.popon{overflow:hidden; height: 100%; width: 100%; position: fixed; top:0; bottom:0;}*/
+html.popon,body.popon{overflow:hidden;position:relative; height: 100%}
+html.popon_noh,body.popon_noh{overflow:hidden;position:relative;}
+body{position:relative;overflow-x:hidden;min-width:320px;color:#262626;font:normal 14px/1.2 YG76, Dotum, sans-serif;-webkit-text-size-adjust:100%;}
+h1,h2,h3,h4,h5,th{font-family:YG76;font-weight:normal;font-size:14px;}
+img{vertical-align:top;border:0;max-width:100%;}
+button{border:0;padding:0;margin:0;background:none;cursor:pointer;text-align:center;outline:0;font-family:YG76;}
+table{table-layout:fixed;border-collapse:collapse;}
+td{word-wrap:break-word;}
+a{text-decoration:none;color:#262626;cursor:pointer;}
+a:hover{color:#546d5b;}
+em{font-style:normal;font-family:Tahoma;font-weight:bold;}
+strong{font-family:Tahoma;}
+li{list-style: none;}
+input{vertical-align:middle;font-family:YG76;border:0;outline:0;border-radius:0;-webkit-appearance:none;-webkit-text-size-adjust:100%;}
+textarea{-webkit-appearance:none;-webkit-text-size-adjust:100%;font-size:14px;}
+/* select{-webkit-text-size-adjust:100%;font-size:14px;-webkit-appearance:none;} */
+hr, legend{position:absolute;width:0;height:0;font-size:0;line-height:0;overflow:hidden;visibility:hidden;text-indent:100%;}
+caption{width:0;height:0;padding:0px;margin:0px;visibility:hidden;}
+label{cursor:pointer;vertical-align:middle;}
+fieldset{border:0;}
+p{margin:0}
 
-.goods{display:flex; flex-wrap: wrap; justify-content: space-around}
-.goods__item{width: 18rem; margin: 30px 10px}
+
+
+/* header */
+.navbar{position: fixed; top:0; z-index: 3;width: 100vw;border-bottom: 1px solid #d9d9d9; box-shadow: 0px 6px 7px #d9d9d9;}
+.navbar .logo{     background: url(/assets/logo.svg) no-repeat; width: 30px; height: 30px; margin-right: 10px;} .nav-item.active .nav-link{border-bottom: 1px solid black}
+.container{margin-top: 70px}
+
+
+/* goods_list */
+.goods__list{display:flex; flex-wrap: wrap; }
+.goods__item{margin: 15px 0}
 .goods__item.is-empty{margin:0;}
-.goods__item .cart-img-top__wrap{width: 100%; height: 0; padding-bottom: 100%; position: relative; background: #e9e9e9;}
-.goods__item .card-img-top{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 
-.goods__item .btn--addCart{float:right}
+.goods__item .btn--addCart{float:right; }
+.goods__item .item__name {font-size: 1.2rem; font-weight: bold; text-align: center; height: 1.2rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.goods__item .card-text{margin-bottom: 5px}
+.goods__item .item__contentSection{margin-bottom:10px}
+.goods__item .item__options__wrap{margin-bottom: 5px}
+
+/* login */
+.login__wrap form {display: flex; flex-flow: column; align-items: center}
