--- a/views/goods_list.ejs
+++ b/views/goods_list.ejs
@@ -1,51 +1,14 @@
 <%- include(HEADER) %>
 
 
-<div class="goods">
-    <div class="card goods__item">
-        <div class="cart-img-top__wrap">
-            <img class="card-img-top" src="/assets/cat_1.jpg" alt="Card image cap">
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <!-- <div class="btn btn-dark btn--addCart">장바구니 담기</div> -->
-
-  
-            <div class="btn btn-dark btn--addCart">장바구니 담기</div>
-
-        </div>
-    </div>
-    <div class="card goods__item">
-        <div class="cart-img-top__wrap">
-            <img class="card-img-top" src="/assets/cat_2.jpg" alt="Card image cap">
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-             
-                <div class="btn btn-dark btn--addCart">장바구니 담기</div>
-        </div>
-    </div>
-
+<div class="goods__wrap">
+    <ul class="goods__list">
+    <% goods.forEach(function(good, i){ %>
+        <li class=".col-xl-3 col-lg-4 col-md-6 col-sm-6">
+        <%- include('./proc/good', {good}) %>
+        </li>
+    <% }) %>
+    </ul>
 </div>
-
-
-<script>
-    var emptyCells, i;
-
-    $('.goods').each(function () {
-        emptyCells = [];
-        for (i = 0; i < $(this).find('.goods__item').length; i++) {
-            emptyCells.push($('<div>', {
-                class: 'goods__item is-empty'
-            }));
-        }
-        $(this).append(emptyCells);
-    });
-</script>
-
 
 <%- include(FOOTER) %>
