--- a/views/join.ejs
+++ b/views/join.ejs
@@ -1,18 +1,21 @@
 <%- include(HEADER) %>
 
 <div class="login__wrap">
-    <%if(locals.flashMessage) {%>
-        <div class="alert alert-danger" role="alert"><%=flashMessage%></div>
-    <%}%>
     <form action="" method="post">
         <div class="form-group col-6">
             <input class="form-control" placeholder="ID" name="username" type="text" autofocus required>
         </div>
         <div class="form-group col-6">
+            <input class="form-control" placeholder="닉네임" name="displayname" type="text" required>
+        </div>
+        <div class="form-group col-6">
             <input class="form-control" placeholder="Password" name="password" type="password" value="" required="">
         </div>
+        <div class="form-group col-6">
+            <input class="form-control" placeholder="Password 확인" name="passwordVali" type="password" value="" required="">
+        </div>
         <!-- Change this to a button or input when using this as a form -->
-        <input type="submit" class="btn btn-lg btn-dark btn-block col-6" value="로그인">
+        <input type="submit" class="btn btn-lg btn-dark btn-block col-6" value="회원가입" >
 
     </form>
 </div>
