--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,8 @@
         </div>
         <!-- Change this to a button or input when using this as a form -->
         <input type="submit" class="btn btn-lg btn-dark btn-block col-6" value="로그인">
+        <a href="/account/join" class="btn btn-lg btn-success btn-success col-6" >회원가입</a>
+
 
     </form>
 </div>
